<resources>
    <string name="app_name">iTrainer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password cannot be blank</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="login_failure">Login Failed</string>
    <string name="login_success">Login Successful, Welcome!</string>
    <string name="register">Register</string>
    <string name="user_name">jdoe</string>
    <string name="password">welcome1</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="new_customer">New Customer</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hint">Enter first name...</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Enter last name...</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter email...</string>
    <string name="save_button">Save</string>
    <string name="add_sessions_header">New Sessions</string>
    <string name="add_qty_sessions">Add Sessions:</string>
    <string name="previous_sessions">Previous Sessions:</string>
    <string name="total_sessions">Total:</string>
    <string name="add_button">Add</string>
    <string name="add_sessions_hint"># of sessions</string>
    <string name="all_customers">All Customers</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="cancel">Cancel</string>
    <string name="signature_label">Signature</string>
    <string name="signature_screen_sessions">Sessions</string>
    <string name="total_price_sig_screen">Total:</string>
    <string name="submit_button">Submit</string>
    <string name="payment_screen_header">Payment</string>
    <string name="number_of_sessions">Number of Sessions</string>
    <string name="new_session_count_hint">enter # here...</string>
    <string name="address">Address</string>
    <string name="phone_label">Phone</string>
    <string name="cc_label">Credit Card</string>
    <string name="exp_date_label">Exp Date</string>
    <string name="edit_button">Edit</string>
    <string name="previous_sessions_header">John Doe: Previous Sessions</string>
    <string name="session_date">Date</string>
    <string name="receipt_header">Customer Receipt</string>
    <string name="company_legal_name">iTrainer LLC.</string>
    <string name="company_address">123 Main Street</string>
    <string name="company_city_st_zip">Tampa, FL 33610</string>
    <string name="company_phone">813-555-5555</string>
    <string name="receipt_name">Customer:</string>
    <string name="customer_address">Address:</string>
    <string name="customer_city_st_zip">St. Pete, FL 33716</string>
    <string name="num_sessions">Number of Sessions:</string>
    <string name="print_button">Print</string>
    <string name="email_button">eMail</string>
    <string name="logged_in_note">Logged In:</string>
    <string name="logOff_Msg01">Logging You Off</string>
    <string name="settings_Msg01">Settings</string>
    <string name="settings_Msg02">Settings feature coming soon!</string>
    <string name="about_Msg01">About Us</string>
    <string name="about_Msg02">About us feature coming soon!</string>
    <string name="btnContinue">Continue</string>
    <string name="home">Home</string>
    <string name="age">Age</string>
    <string name="age_hint">Enter age...</string>
    <string name="DOB">DOB</string>
    <string name="start_weight">Start Weight</string>
    <string name="target_weight">Target:</string>
    <string name="unique_id_label">Customer ID</string>
    <string name="price_per_session">Price/each: </string>
    <string name="price">$29.99</string>
    <string name="completedMsg01">Completed:</string>
    <string name="totSessionsMsg01">Number of Sessions:</string>
    <string name="addSessionsMsg01">How many sessions are you adding?</string>
    <string name="completeSessionMsg01">Is this session completed?</string>

    <string-array name="customer">
        <item>"John Doe"</item>
        <item>"Ronald Reagan"</item>
        <item>"Richard Nixon"</item>
        <item>"John Kennedy"</item>
        <item>"Dwight Eisenhower"</item>
        <item>"Jimmy Carter"</item>
        <item>"Lyndon Johnson"</item>
        <item>"Bill Clinton"</item>
        <item>"Barack Obama"</item>
        <item>"Papa Bush"</item>
    </string-array>

    <string-array name="userName">
        <item>"jdoe1"</item>
        <item>"rreagan"</item>
        <item>"rnixon"</item>
        <item>"jkennedy"</item>
        <item>"deisenhower"</item>
        <item>"jcarter"</item>
        <item>"ljohnson"</item>
        <item>"bclinton"</item>
        <item>"bobama"</item>
        <item>"pbush"</item>
    </string-array>

</resources>
