<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:gravity="center_vertical">

    <FrameLayout
        android:id="@+id/user_login_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/previous_sessions_header"
        android:id="@+id/previous_sessions_header"
        android:layout_gravity="center_horizontal"
        android:layout_margin="24dp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:orientation="horizontal"
                  android:layout_gravity="center_horizontal" android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/session_date"
            android:id="@+id/date_label"
            android:layout_margin="24dp" android:layout_gravity="left|center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Completed"
            android:id="@+id/sessionCompletedLabel" android:layout_margin="24dp"
            android:layout_gravity="center_vertical|right"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:layout_width="175dp"
            android:layout_height="300dp"
            android:id="@+id/previous_session_list"
            android:layout_gravity="left"
            android:layout_marginRight="10dp"/>
        <ListView
            android:layout_width="175dp"
            android:layout_height="300dp"
            android:id="@+id/previous_session_list2"
            android:layout_gravity="right"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:id="@+id/btnBack_customerScreen"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:layout_marginLeft="24dp"
            android:id="@+id/btnAddSessions_customerScreen"/>
    </LinearLayout>
</LinearLayout>